# ai-changelog

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml
cli/: __main__.py  commit_shaping_utils.py  git_utils.py  llm_utils.py
prompts/: base.txt
test/: test_commit_shaping_utils.py  test_git_utils.py  test_llm_utils.py
